--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "rex",
   "version": "0.0.1",
   "description": "FRP with React Hooks",
-  "main": "index.js",
+  "main": "dist/rex.cjs.js",
+  "entrypoint": [
+    "src/index.ts"
+  ],
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.7",
     "@preconstruct/cli": "^2.1.5",
-    "@types/react": "^17.0.38"
+    "@types/react": "^17.0.38",
+    "typescript": "^4.5.4"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^17.0.2"
   },
   "author": {
